--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@fortawesome/ember-fontawesome": "^0.1.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "active-model-adapter": "^2.2.0",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.1.4",
